root font % change for rem, fix h1 align issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
-
+html {
+  font-size: 62.5%;
+}
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -55,17 +57,19 @@ nav {
   background-color: #252831;
 }
 nav h1 {
-  margin: auto;
   height: 140px;
   text-align: center;
-  padding: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 nav h1 a {
   color: #fff;
-  font-size: 1rem;
+  font-size: 1.8rem;
   font-weight: 200;
   letter-spacing: 0.5rem;
   text-transform: uppercase;
+  padding: 0 2.3rem;
 }
 #breadcrumb {
     padding: 10px 40px 16px;
